break up scss into 7-1

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -1,8 +1,6 @@
-/********************************************************************************************************/
-/********************************* GLOBAL SETTINGS *******************************************************/
-/********************************************************************************************************/
-/* GLOBALS
-	============================= */
+/******************************************************************************/
+/********************************* VARIABLES *********************************/
+/****************************************************************************/
 * {
   box-sizing: border-box;
   font-family: sans-serif; }
@@ -17,20 +15,24 @@ button {
     padding: 1px 2px;
     border-bottom: 0.01em solid #666;
     border-bottom-right-radius: 0.01em;
-    border-color: #b3b3b3;
+    border-color: #9a9a9a;
     border-radius: 0.25em !important;
-    border-right: 0.02em solid #333333;
-    border-style: outset; }
-  button:before {
-    display: none; }
+    border-right: 0.02em solid rgba(28, 28, 28, 0.14902);
+    border-style: outset;
+    background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #610b0d 50%);
+    background-size: 290%;
+    transition: background-position .5s; }
   button:hover, button:focus, button:active {
     font-weight: bold;
-    background-color: #FCD116; }
+    background-position: 100%;
+    color: #fff; }
   button > span {
     display: block;
     overflow: hidden;
     text-overflow: ellipsis;
     width: 100%; }
+  button:before {
+    display: none; }
 
 div {
   background-color: transparent; }
@@ -66,14 +68,19 @@ input {
     input[type='text']:placeholder-shown, input[type='number']:placeholder-shown {
       border: 1px dotted #555;
       background-color: rgba(28, 28, 28, 0.14902);
-      color: white; }
+      color: #fff; }
   input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0; }
+  input[name='attr_stats_toggle'], input[name='attr_stats_toggle'] + span {
+    position: relative; }
+  input[name='attr_stats_toggle'] {
+    opacity: 0;
+    z-index: 2; }
 
 select {
   border-radius: 2px;
-  border: 1px solid #000;
+  border: 1px solid #040404;
   box-shadow: inset 0px 0px 3px 1px #7c7c7c;
   margin-bottom: 0px;
   width: auto; }
@@ -83,7 +90,7 @@ span {
 
 textarea {
   border-radius: 2px;
-  border: 1px solid #000;
+  border: 1px solid #040404;
   box-shadow: inset 0px 0px 3px 1px #7c7c7c;
   height: 50px;
   overflow-wrap: break-word;
@@ -98,24 +105,23 @@ textarea {
 .sheet-red {
   color: #610b0d; }
 
-.sheet-text-align-center {
+.sheet-text-center {
   text-align: center; }
-
-input[name='attr_stats_toggle'],
-input[name='attr_stats_toggle'] + span {
-  position: relative; }
-
-input[name='attr_stats_toggle'] {
-  opacity: 0;
-  z-index: 2; }
 
 .sheet-eclipse {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap; }
 
-/* SWITCHES
-	============================= */
+.sheet-text-left {
+  text-align: left; }
+
+.sheet-text-capitalize {
+  text-transform: capitalize; }
+
+.sheet-dicefontd6 {
+  font-family: "dicefontd6"; }
+
 /* The switch - the box around the slider */
 .sheet-switch {
   position: relative;
@@ -165,39 +171,37 @@ input:checked + .sheet-slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px); }
 
-/* MIXIN
-	============================= */
-/***** TABS FOR SHEETS *****/
-.sheet-tabs button[type='action'] {
-  background-color: #333;
-  border-radius: 2px;
-  border: 1px solid #000;
-  box-shadow: inset 0px 0px 3px 1px #7c7c7c;
-  color: #fff;
-  font-size: 1em;
-  font-weight: bolder;
-  text-transform: capitalize;
-  padding: 5px; }
-  .sheet-tabs button[type='action'].sheet-pictos, .sheet-tabs .sheet-cc-row button[type='action'][name*='shots'], .sheet-cc-row .sheet-tabs button[type='action'][name*='shots'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_reload'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_reload'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_primary_ammo'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_primary_ammo'], .sheet-tabs .repcontrol button[type='action'].repcontrol_edit:after, .repcontrol .sheet-tabs button[type='action'].repcontrol_edit:after,
-  .sheet-tabs .repcontrol button[type='action'].repcontrol_add:after,
-  .repcontrol .sheet-tabs button[type='action'].repcontrol_add:after, .sheet-tabs .itemcontrol button[type='action'].repcontrol_del, .itemcontrol .sheet-tabs button[type='action'].repcontrol_del {
-    text-transform: lowercase; }
-.sheet-tabs button[type='roll'] {
-  background: none;
-  border: none;
-  color: #fff;
-  font-family: 'dicefontd6';
-  font-size: 2.5em;
-  vertical-align: top; }
-  .sheet-tabs button[type='roll']:hover {
-    text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #e31715; }
-.sheet-tabs h2 {
-  color: #fff;
-  font-size: 1em;
-  text-transform: capitalize;
-  text-align: right;
-  line-height: 2em;
-  margin-right: 5%; }
+.sheet-tabs {
+  color: #fff; }
+  .sheet-tabs button[type='action'] {
+    background-color: #333;
+    border-radius: 2px;
+    border: 1px solid #040404;
+    box-shadow: inset 0px 0px 3px 1px #7c7c7c;
+    font-size: 1em;
+    font-weight: bolder;
+    text-transform: capitalize;
+    padding: 5px; }
+    .sheet-tabs button[type='action'].sheet-pictos, .sheet-tabs .sheet-cc-row button[type='action'][name*='shots'], .sheet-cc-row .sheet-tabs button[type='action'][name*='shots'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_reload'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_reload'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_primary_ammo'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_primary_ammo'], .sheet-tabs .repcontrol button[type='action'].repcontrol_edit:after, .repcontrol .sheet-tabs button[type='action'].repcontrol_edit:after,
+    .sheet-tabs .repcontrol button[type='action'].repcontrol_add:after,
+    .repcontrol .sheet-tabs button[type='action'].repcontrol_add:after, .sheet-tabs .itemcontrol button[type='action'].repcontrol_del, .itemcontrol .sheet-tabs button[type='action'].repcontrol_del {
+      text-transform: lowercase; }
+  .sheet-tabs button[type='roll'] {
+    background: none;
+    border: none;
+    color: #fff;
+    font-family: 'dicefontd6';
+    font-size: 2.5em;
+    vertical-align: top; }
+    .sheet-tabs button[type='roll']:hover {
+      text-shadow: 1px 1px 2px #040404, 0 0 25px #610b0d, 0 0 5px #e31715; }
+  .sheet-tabs h2 {
+    color: #fff;
+    font-size: 1em;
+    text-transform: capitalize;
+    text-align: right;
+    line-height: 2em;
+    margin-right: 5%; }
 
 /***** TABS FOR SHEETS *****/
 .sheet-settings-toggle input,
@@ -242,10 +246,7 @@ input.sheet-toggle {
   margin-bottom: 2%; }
 
 .sheet-pc div.sheet-repeating-container div.repitem, .sheet-pc div.sheet-repeating-container div.repitem input[type='text'], .sheet-pc div.sheet-repeating-container div.repitem input[type='number'], .sheet-pc div.sheet-skill-box label > input, .sheet-pc div.sheet-skill-box input[name='attr_skill'], .sheet-pc div.sheet-matrix div.sheet-programs div.repitem {
-  border-bottom: 1px solid #333; }
-
-.sheet-center {
-  text-align: center; }
+  border-bottom: 1px solid #040404; }
 
 select.sheet-attribute-select option:nth-of-type(1n+5) {
   color: #610b0d; }
@@ -278,23 +279,11 @@ div.sheet-matrix-device .sheet-matrixData {
 div.sheet-matrix-device .sheet-matrixFirewall {
   box-shadow: 0px 0px 29px 8px  #f88703; }
 
-.sheet-text-capitalize {
-  text-transform: capitalize; }
-
-.sheet-text-left {
-  text-align: left; }
-
-.sheet-dicefontd6 {
-  font-family: "dicefontd6"; }
-
 /***** GRID *****/
 .sheet-pc div.sheet-repeating-container div.repitem, .sheet-pc div.sheet-repeating-container div.repitem div.sheet-settings, .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.sheet-headers, .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.sheet-headers, .sheet-pc div.sheet-skill-box div.sheet-row-long, .sheet-pc div.sheet-arms div.sheet-headers, .sheet-pc div.sheet-magic div.sheet-headers, .sheet-pc div.sheet-matrix div.sheet-complex-forms div.sheet-headers {
   grid-column-gap: 1%;
   grid-row-gap: 1%; }
 
-/******************************************************************************/
-/********************************* VARIABLES *********************************/
-/****************************************************************************/
 /***************************************************************************************/
 /************************** START OF THE PC SHEET *************************************/
 /*************************************************************************************/
@@ -318,6 +307,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   /*** MATRIX ****/
   /*** SOCIAL ****/
   /*** Vehicle ****/ }
+  .sheet-pc button[name*='shots']:hover,
   .sheet-pc button > h2:hover,
   .sheet-pc button > span:hover,
   .sheet-pc label > button[type='roll']:hover,
@@ -325,7 +315,9 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-pc .sheet-con-track button[type='action']:hover,
   .sheet-pc button[data-i18n='default']:hover {
     color: #fff;
-    text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #610b0d; }
+    text-shadow: 1px 1px 2px #555, 0 0 25px #fff, 0 0 5px #fff; }
+  .sheet-pc button:hover > span {
+    color: #fff; }
   .sheet-pc h1 {
     background-color: #610b0d;
     color: #fff;
@@ -493,6 +485,8 @@ div.sheet-matrix-device .sheet-matrixFirewall {
         color: #fff; }
       .sheet-pc div.sheet-core div.sheet-armor-buttons span {
         font-size: 1em; }
+    .sheet-pc div.sheet-core button[name="act_primary_ammo"]:hover > img {
+      filter: brightness(0) invert(1); }
     .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-htab input[type='radio'] {
       margin-right: -100px;
       width: 100px; }
@@ -1394,6 +1388,8 @@ div.sheet-htab {
     /* IE 9 */
     -webkit-transform: rotate(180deg);
     /* Safari 3-8 */ }
+  .sheet-cc-row button[name="act_reload"]:hover {
+    color: #fff; }
   .sheet-cc-row button[type='roll'] > span,
   .sheet-cc-row h3 + span {
     display: inline-block;
@@ -2529,13 +2525,11 @@ input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body div.she
 
 .sheet-pc .sheet-tabs input[value*='arms'] ~ button[name*='arms'], .sheet-pc .sheet-tabs input[value*='augs'] ~ button[name*='augs'], .sheet-pc .sheet-tabs input[value*='core'] ~ button[name*='core'], .sheet-pc .sheet-tabs input[value*='gear'] ~ button[name*='gear'], .sheet-pc .sheet-tabs input[value*='options'] ~ button[name*='options'], .sheet-pc .sheet-tabs input[value*='social'] ~ button[name*='social'], .sheet-pc .sheet-tabs input[value*='magic'] ~ button[name*='magic'], .sheet-pc .sheet-tabs input[value*='matrix'] ~ button[name*='matrix'], .sheet-pc .sheet-tabs input[value*='vehicle'] ~ button[name*='vehicle'] {
   background-color: #610b0d;
-  box-shadow: inset 0px 0px 3px 1px #e31715;
-  color: #fff; }
+  box-shadow: inset 0px 0px 3px 1px #610b0d; }
 
 /*****************************************************************************************/
 /**************************************** FOOTER ****************************************/
 /***************************************************************************************/
-/**** Footer ****/
 .sheet-footer {
   border: none;
   font-size: 0.55em;
@@ -2563,19 +2557,18 @@ div.sheet-footer img {
   display: inline-block;
   vertical-align: top;
   min-height: 27px; }
-
-.repcontrol .btn {
-  background: none;
-  border: medium none;
-  box-shadow: none;
-  color: transparent !important;
-  display: inline-block;
-  font-size: 15px;
-  margin-left: 10px;
-  outline: 0;
-  padding: 0px 0px 0px 0px;
-  text-shadow: none;
-  width: 25px; }
+  .repcontrol .btn {
+    background: none;
+    border: medium none;
+    box-shadow: none;
+    color: transparent !important;
+    display: inline-block;
+    font-size: 15px;
+    margin-left: 10px;
+    outline: 0;
+    padding: 0px;
+    text-shadow: none;
+    width: 25px; }
 
 .repcontrol .repcontrol_edit:after,
 .repcontrol .repcontrol_add:after {
@@ -2598,7 +2591,7 @@ div.sheet-footer img {
 
 .repcontrol .repcontrol_edit:after,
 .repcontrol .repcontrol_add:after {
-  color: #000;
+  color: #040404;
   position: relative; }
 
 .sheet-npc .repcontrol .repcontrol_edit:after,
@@ -2622,35 +2615,35 @@ div.sheet-footer img {
   width: 18px; }
 
 .itemcontrol .repcontrol_del {
-  background-color: darkred; }
+  background-color: #610b0d; }
 
 /********************************************************************************************************/
 /**************************************** Roll template *******************************************/
 /********************************************************************************************************/
 .sheet-rolltemplate-rolls div.sheet-template-body {
-  border: 2px solid #000 !important;
+  border: 2px solid #040404 !important;
   border-radius: 3px 3px 3px 3px; }
 
 .sheet-rolltemplate-rolls .sheet-template-header {
-  background-color: #431714;
-  border: 1px solid #000;
-  border-bottom: 2px solid #000;
-  box-shadow: inset 0px 0px 3px 1px #000;
+  background-color: #610b0d;
+  border: 1px solid #040404;
+  border-bottom: 2px solid #040404;
+  box-shadow: inset 0px 0px 3px 1px #040404;
   color: #fff;
   font-size: 1.5em;
   font-variant: small-caps;
   letter-spacing: 2px;
   padding: 3px 0px 5px 0px;
   text-align: center;
-  text-transform: capitalize; }
+  text-transform: capitalize;
+  font-weight: bold; }
   .sheet-rolltemplate-rolls .sheet-template-header h1 {
-    font-weight: bold;
-    font-size: 1.1em;
-    color: #fff; }
+    font-size: 0.8em;
+    color: #fff;
+    line-height: 1em; }
   .sheet-rolltemplate-rolls .sheet-template-header span {
     font-family: 'tahoma';
     font-size: 0.5em;
-    font-weight: normal;
     font-variant: normal;
     letter-spacing: 1px; }
 
@@ -2659,7 +2652,7 @@ div.sheet-footer img {
   text-align: center;
   font-size: 18px;
   background-color: #1c1c1c;
-  box-shadow: inset 0px 0px 3px 1px #000;
+  box-shadow: inset 0px 0px 3px 1px #040404;
   line-height: 1.1em;
   font-family: 'helvetica';
   padding: 5px 5px 3px 5px; }
@@ -2669,7 +2662,7 @@ div.sheet-footer img {
     font-family: "dicefontd6";
     color: #1c1c1c;
     border: none;
-    box-shadow: outset 0px 0px 3px 1px #000;
+    box-shadow: outset 0px 0px 3px 1px #040404;
     font-size: 1.8em;
     background: none !important;
     padding: 1px;
@@ -2849,9 +2842,6 @@ div.sheet-hidden div {
   margin-right: 2%;
   width: 40%; }
 
-/********************************************************************************************************/
-/*******************************         FireFox             *******************************************/
-/******************************************************************************************************/
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -2860,9 +2850,6 @@ input[type=number]::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield; }
 
-/********************************************************************************************/
-/*****************         French Adjustments                ********************************/
-/*******************************************************************************************/
 .charsheet.lang-fr .sheet-tab-whisper,
 .charsheet.lang-fr .sheet-tab-toggles {
   margin-right: 2%; }
