--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -117,7 +117,7 @@ mixin pcSpells(type)
         button(name=`roll_${type}` type='roll' value!=rollBeginging+'{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})'+rollEnding+`{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]] [f](~repeating_${type}_drain)}}`)
             span(name='attr_name')
         each val in ['type', 'range', 'duration', 'drain']
-            span.center(name='attr_'+val)
+            span.text-center(name='attr_'+val)
         input.collapse-flag(name='attr_display_flag' type='checkbox' checked)
         span.pictos i
         input.settings-flag(name='attr_flag' title='Settings toggle' type='checkbox' checked)
