--- a/Shadowrun5thEdition/src/pug/tabs/augs.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/augs.pug
@@ -11,8 +11,8 @@
         .rows.repeating-container
           fieldset(class=`repeating_augementations`)
             span(name=`attr_augmentation`)
-            span.center(name=`attr_rating`)
-            span.center(name=`attr_essence`)
+            span.text-center(name=`attr_rating`)
+            span.text-center(name=`attr_essence`)
             +repeatingSectionFlags()
             .settings
               each val in augementations
