--- a/Shadowrun5thEdition/src/pug/tabs/core.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/core.pug
@@ -21,7 +21,7 @@
           .rows.repeating-container
             fieldset(class='repeating_quality')
               span.eclipse(name="attr_quality")
-              span.center(name="attr_type")
+              span.text-center(name="attr_type")
               button.pictos(name="quality_chat" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{quality}}}{{desc=@{notes}}}") w
               +repeatingSectionFlags()
               .settings
@@ -37,7 +37,7 @@
           .rows.repeating-container
             fieldset(class='repeating_martial')
               span.eclipse(name="attr_technique")
-              span.center(name="attr_style")
+              span.text-center(name="attr_style")
               button.pictos(name="technique_chat" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{technique}}}{{desc=@{notes}}}") w
               +repeatingSectionFlags()
               .settings
