--- a/Shadowrun5thEdition/src/pug/tabs/gear.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/gear.pug
@@ -11,8 +11,8 @@
         .rows.repeating-container
           fieldset(class=`repeating_items`)
             span(name=`attr_item`)
-            span.center(name=`attr_rating`)
-            span.center(name=`attr_quantity`)
+            span.text-center(name=`attr_rating`)
+            span.text-center(name=`attr_quantity`)
             +repeatingSectionFlags()
             .settings
               label(data-i18n-title='item' title='item')
