--- a/Shadowrun5thEdition/src/pug/tabs/magic.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/magic.pug
@@ -36,7 +36,7 @@
             fieldset(class='repeating_preperations')
               +displayRollButton(prepButton, false)
               each val in ['force', 'potency', 'trigger']
-                span.center(name=`attr_${val}`)
+                span.text-center(name=`attr_${val}`)
               +repeatingSectionFlags()
               .settings
                 label(data-i18n-title='name' title='name')
@@ -60,7 +60,7 @@
               input(name='attr_dicepool' type='hidden' value='0')
               +displayRollButton(pcRitualButton, true)
               each val in ['type', 'range', 'duration', 'drain']
-                span.center(name='attr_'+val)
+                span.text-center(name='attr_'+val)
               +repeatingSectionFlags()
               .settings
                 label(data-i18n-title='name' title='name')
@@ -87,11 +87,11 @@
         +fadeDrainSection('drain', true)
         .row-long.headers
           h2(data-i18n='name') Name
-          h2.center(data-i18n='rating') Rating
+          h2.text-center(data-i18n='rating') Rating
         .rows.repeating-container.powers
           fieldset(class=`repeating_powers`)
             span(name='attr_name')
-            span.center(name='attr_rating')
+            span.text-center(name='attr_rating')
             +repeatingSectionFlags()
             .settings
               label(data-i18n-title='name' title='name')
