--- a/Shadowrun5thEdition/src/pug/tabs/matrix.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/matrix.pug
@@ -40,7 +40,7 @@
             +displayRollButton(pcComplexFormButton, true)
             - const complexFormSpans = complexFormAttributes.shift();
             each val in complexFormSpans
-              span.center.eclipse(name=`attr_${val}`)
+              span.text-center.eclipse(name=`attr_${val}`)
             +repeatingSectionFlags()
             .settings
               label(data-i18n-title='name' title='name')
