--- a/Shadowrun5thEdition/src/pug/tabs/social.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/social.pug
@@ -55,9 +55,9 @@
         .rows.repeating-container
           fieldset(class='repeating_contacts')
             span.eclipse(name="attr_name")
-            span.center(name="attr_loyalty")
-            span.center(name="attr_connection")
-            span.center(name="attr_favors")
+            span.text-center(name="attr_loyalty")
+            span.text-center(name="attr_connection")
+            span.text-center(name="attr_favors")
             button.pictos(name="ontact_chat" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{name}}}{{desc=^{loyalty} @{loyalty} , ^{connection} @{connection}, ^{favor} @{favors}}}") w
             +repeatingSectionFlags()
             .settings
