--- a/Shadowrun5thEdition/src/pug/tabs/static.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/static.pug
@@ -28,7 +28,7 @@
                 .row-long
                   input(name='attr_default_display' type='hidden' value='Agility')
                   +rollButton('default', '@{default_display}', '@{default_attribute}+-1')
-                  span.text-align-center -
+                  span.text-center -
                   select.attribute-select(name='attr_default_attribute' title='Skill attribute')
                     +attributeSelect('Agility')
                   select.limit-select(name='attr_limit' title='Skill limit')
@@ -51,7 +51,7 @@
                   +skillButton(false, key)
                   //- SPECILIZATION BUTTON
                   +skillButton(true)
-                span.text-align-center(name='attr_display_rating' title=`${skillsRepeatingSection}_display_rating}`)
+                span.text-center(name='attr_display_rating' title=`${skillsRepeatingSection}_display_rating}`)
                 select.attribute-select(name='attr_attribute' title=`${skillsRepeatingSection}_attribute}`)
                   +attributeSelect(val[1])
                 select.limit-select(name='attr_limit' value='physical_limit' title=`${skillsRepeatingSection}_limit}`)
