--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -187,13 +187,17 @@
 				width      : 5%;
 			}
 
-			&[name*='primary_ammo'] { width: 10%; }
+			&[name*='primary_ammo'] { 
+        width: 10%; 
+      }
 
 			&[type='action'] > span {
 				display: inline;
 				margin-left: 0px;
 
-				&:before { content: 'x'; } /** The x# after ammo button **/
+				&:before { 
+          content: 'x'; 
+        } /** The x# after ammo button **/
 			}
 
 			&[name*='shots'],
@@ -212,6 +216,10 @@
 				-ms-transform: rotate(180deg); /* IE 9 */
 				  -webkit-transform: rotate(180deg); /* Safari 3-8 */
 			}
+
+      &[name="act_reload"]:hover {
+        color: #fff;
+      }
 		}
 
 		button[type='roll'] > span,
