--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -1,119 +1,29 @@
-//- Colors:
-	$gold: #FCD116;
-	$red: #610b0d;
-	$purple: #7a2593;
-	$lightgray: #9a9a9a;
-	$graytrans: rgba(28, 28, 28, 0.14902);
-	$grayshadow: #7c7c7c;
-	$blacker: #040404;
-	$ccc: #cccccc;
-	//- GRAY IN ROLL TEMPLATE
-	$blackish: #1c1c1c;
-	//-(primaryly on the NPC sheet)
-	$gray: #555;
-	$white: #fff;
+@import 'src/scss/abstracts/variables'; 
+@import 'src/scss/abstracts/mixins'; 
 
+@import 'src/scss/base/base';
+@import 'src/scss/base/utilities';
 
-/********************************************************************************************************/
-/********************************* GLOBAL SETTINGS *******************************************************/
-/********************************************************************************************************/
-/* GLOBALS
-	============================= */
-	@import 'src/scss/_global'; 
+@import 'src/scss/components/switch';
 
-/* SWITCHES
-	============================= */
-	@import 'src/scss/_switch'; 
-
-/* MIXIN
-	============================= */
-@mixin repeatingInformation($endColumn, $longCollapseFlag) {
-	label[data-i18n-title='notes'], 
-	h3[data-i18n='notes'], 
-	div.sheet-collapse { 
-		grid-column: 1 / #{$endColumn};
-
-    span[name='attr_notes'] {
-      white-space: pre-line;
-    }
-	}
-
-	input.sheet-collapse-flag {
-		@if $longCollapseFlag {
-			grid-area: 1 / 1 / 1 / #{$endColumn - 1};
-			position: absolute;
-			width: 100%;
-		} @else {
-			grid-area: 1 / #{$endColumn - 2} / 1 / #{$endColumn - 1};
-		}
-	}
-
-	input.sheet-collapse-flag + span.sheet-pictos { 
-		grid-area: 1 / #{$endColumn - 2} / 1 / #{$endColumn - 1}; 
-	}
-
-	input.sheet-settings-flag, 
-	input.sheet-settings-flag + span.sheet-pictos { 
-		grid-area: 1 / #{$endColumn - 1} / 1 / #{$endColumn}; 
-	}
-}
-
-/***** TABS FOR SHEETS *****/
-	.sheet-tabs {
-		button {
-			&[type='action'] {
-				background-color: #333;
-				border-radius   : 2px;
-				border          : 1px solid #000;
-				box-shadow      : inset 0px 0px 3px 1px #7c7c7c;
-				color           : #fff;
-				font-size       : 1em;
-				font-weight     : bolder;
-				text-transform  : capitalize;
-				padding         : 5px;
-
-				&.sheet-pictos {text-transform: lowercase;}
-			}
-
-			&[type='roll'] {
-				background: none;
-				border: none;
-				color         : #fff;
-				font-family   : 'dicefontd6';
-				font-size     : 2.5em;
-				vertical-align: top;
-
-				&:hover {
-					text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #e31715;
-				}
-			}
-		}
-
-		h2 {
-			color: #fff;
-			font-size: 1em;
-			text-transform: capitalize;
-			text-align: right;
-			line-height: 2em;
-			margin-right: 5%;
-		}
-	}
+@import 'src/scss/layout/tabs';
 
 /***** TABS FOR SHEETS *****/
 .sheet-settings-toggle,
 .sheet-settings-flag {
-	 input { width: 3em;}
+	 input { 
+		width: 3em;
+	 }
 
 	input[type='checkbox'] + span {
-      background : transparent;
-      @extend .sheet-pictos;
-      font-size  : 20px;
-      height     : 20px;
-      text-align : center;
-      width      : 20px;
-  }
+			background : transparent;
+			@extend .sheet-pictos;
+			font-size  : 20px;
+			height     : 20px;
+			text-align : center;
+			width      : 20px;
+	}
 }
-
 
 /***** GENERIC STYLES *****/
 %parantheseNumbers {
@@ -146,14 +56,14 @@ input.sheet-toggle {
 	}
 }
 
-%borderBottom { border-bottom: 1px solid #333; }
-
-.sheet-center { text-align: center; }
+%borderBottom { 
+	border-bottom: 1px solid $blacker; 
+}
 
 select {
 	&.sheet-attribute-select {
 		option:nth-of-type(1n+5) { color: $red; }
-		option:nth-of-type(1n+9) { color: #7a2593;	}
+		option:nth-of-type(1n+9) { color: $purple;	}
 	}
 
 	&.sheet-limit-select  {
@@ -163,32 +73,11 @@ select {
 
 @import 'src/scss/_matrixdevice'; 
 
-.sheet-text-capitalize {
-	text-transform: capitalize;
-}
-
-.sheet-text-left {
-  text-align: left;
-}
-
-.sheet-dicefontd6 {
-  font-family: "dicefontd6"
-}
-
 /***** GRID *****/
 %gridGap {
 	grid-column-gap: 1%;
 	grid-row-gap: 1%;
 }
-
-
-/******************************************************************************/
-/********************************* VARIABLES *********************************/
-/****************************************************************************/
-$tabs:'arms', 'augs', 'core', 'gear', 'options', 'social', 'magic', 'matrix', 'vehicle';
-$characterTypes: 'npc', 'pc';
-$specialCharacters: 'magic', 'resonance';
-$npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 /***************************************************************************************/
 /************************** START OF THE PC SHEET *************************************/
@@ -198,23 +87,28 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		background-image: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/Blackbackground.jpg');
 		background-size : cover;
 		border          : 3px solid;
-		box-shadow      : inset 0px 0px 3px 1px #7c7c7c;
+		box-shadow      : inset 0px 0px 3px 1px $grayshadow;
 		margin-left     : -1%;
 		padding-left    : 0.5%;
 
+		button[name*='shots']:hover,
 		button > h2:hover,
 		button > span:hover,
 		label > button[type='roll']:hover,
 		.sheet-repeat-box button[type='roll']:hover,
 		.sheet-con-track button[type='action']:hover,
 		button[data-i18n='default']:hover {
-			color      : #fff;
-			text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px $red;
+			color      : $white;
+			text-shadow: $text-shadow;
+		}
+
+		button:hover > span {
+			color: $white;
 		}
 
 		h1 {
 			background-color: $red;
-			color           : #fff;
+			color           : $white;
 			font-size       : 1em;
 			letter-spacing  : 2px;
 			line-height     : 20px;
@@ -252,12 +146,14 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			margin-top: 1%;
 			grid-row-gap: 10%;
 
-			button[type='roll'] {grid-area: 2 / 5 / 2 / 5;}
+			button[type='roll'] {
+				grid-area: 2 / 5 / 2 / 5;
+			}
 
 				/***** PLAYER DATA INPUTS *****/
 			h1 {
 				background-color: transparent;
-				color: #fff;
+				color: $white;
 				display: inline-block;
 				font-size : 1em;
 				grid-column: 6 / 8;
@@ -290,12 +186,12 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			label {
 				&[data-i18n-title='character name'] > input[type='text'],
 				&[data-i18n-title='player name'] > input[type='text'] {
-					color           : #fff;
+					color           : $white;
 					font-weight     : bolder;
 					background-color: transparent;
 					border          : none;
 					box-shadow      : none;
-					border-bottom   : 2px solid #fff;
+					border-bottom   : 2px solid $white;
 					border-radius   : 0px;
 					height          : 30px;
 					width           : 100%;
@@ -432,7 +328,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			div.sheet-border-box .sheet-pc-box {
 				border-top-right-radius: 0px;
 				border-top-left-radius : 10px;
-			}	
+			}
 		}
 
 
@@ -440,7 +336,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		div.sheet-core {
 			div.sheet-armor-buttons {
 				display    : inline-block;
-				font-size  : 1.5em;
+				font-size: 1.5em;
 				line-height: 20px;
 				margin-left: 1%;
 				width      : 35%;
@@ -453,7 +349,13 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					}
 				}
 
-				span { font-size  : 1em; }
+				span { 
+					font-size: 1em; 
+				}
+			}
+
+			button[name="act_primary_ammo"]:hover > img {
+				filter: brightness(0) invert(1);
 			}
 
 			/***** QUALITIES *****/
@@ -543,16 +445,16 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				}
 			}
 
-      div.sheet-buttons {
-        display: grid;
-        grid-template-columns: 1.5fr 1.5fr;
-        overflow: hidden;
-      }
+			div.sheet-buttons {
+				display: grid;
+				grid-template-columns: 1.5fr 1.5fr;
+				overflow: hidden;
+			}
 
-      input[name='attr_specialization'][value=''] ~ div.sheet-buttons {
-        grid-template-columns: 1fr;
-      }
-        
+			input[name='attr_specialization'][value=''] ~ div.sheet-buttons {
+				grid-template-columns: 1fr;
+			}
+				
 			input[name='attr_skill'] { @extend %borderBottom; }
 
 			input[name='attr_rating_modifier'] { width: 3.5em; }
@@ -571,14 +473,14 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				h3:nth-of-type(1n+2) { text-align: center; }
 			}
 
-      option.sheet-option-headers {
-        opacity: 0.2;
-      }
+			option.sheet-option-headers {
+				opacity: 0.2;
+			}
 
-      option.sheet-option-groups {
-        font-size: 1em;
-        font-style: italic;
-      }
+			option.sheet-option-groups {
+				font-size: 1em;
+				font-style: italic;
+			}
 
 			div.repitem {
 				grid-template-columns: $skillGrid;
@@ -720,10 +622,10 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		}
 
 
-    //used in magic & complex forms
-    select.sheet-attribute-select {
-      margin-top: 1%;
-    }
+		//used in magic & complex forms
+		select.sheet-attribute-select {
+			margin-top: 1%;
+		}
 
 		/***** MAGIC *****/
 		div.sheet-magic {
@@ -853,22 +755,22 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					@extend %borderBottom;
 					@include repeatingInformation(6, false);
 
-          input[name='attr_program_on'] {
-            grid-area: 1 / 1 / 1 / 1;
+					input[name='attr_program_on'] {
+						grid-area: 1 / 1 / 1 / 1;
 
-            &:checked + span {
-              color: $gold;
-              font-weight: bolder;
+						&:checked + span {
+							color: $gold;
+							font-weight: bolder;
 
-              & + span {
-                font-weight: bolder;
-              }
-            }
+							& + span {
+								font-weight: bolder;
+							}
+						}
 
-            & + span {
-              grid-area: 1 / 1 / 1 / 1;
-            }
-          }
+						& + span {
+							grid-area: 1 / 1 / 1 / 1;
+						}
+					}
 				}
 
 				div.sheet-settings { 
@@ -914,61 +816,61 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			}
 		}
 
-    /*** SOCIAL ****/
-    div.sheet-social {
+		/*** SOCIAL ****/
+		div.sheet-social {
 
-      div.sheet-lifestyle {
-        $lifestyleGrid: 1fr 1.5em 1em 1em;
-        div.repitem {
-          grid-template-columns: $lifestyleGrid;
-          @include repeatingInformation(5, false);
+			div.sheet-lifestyle {
+				$lifestyleGrid: 1fr 1.5em 1em 1em;
+				div.repitem {
+					grid-template-columns: $lifestyleGrid;
+					@include repeatingInformation(5, false);
 
-          div.sheet-collapse {
-            padding-left: 2%;
+					div.sheet-collapse {
+						padding-left: 2%;
 
-            h3 {
-              margin-right: 1%;
-            }
-          }
+						h3 {
+							margin-right: 1%;
+						}
+					}
 
-          div.sheet-settings { 
-            grid-column: 1 / 5;
-            padding: 1% 2% 5% 2%;
-            min-height: 300px;
+					div.sheet-settings { 
+						grid-column: 1 / 5;
+						padding: 1% 2% 5% 2%;
+						min-height: 300px;
 
-            textarea {
-              height: 45px;
-              min-height: 45px;
-            }
-          }
-        }
-      }
+						textarea {
+							height: 45px;
+							min-height: 45px;
+						}
+					}
+				}
+			}
 
-      div.sheet-contacts {
-        $contactsGrid: 1fr 4em 5.5em 4em 1.5em 1em 1em;
+			div.sheet-contacts {
+				$contactsGrid: 1fr 4em 5.5em 4em 1.5em 1em 1em;
 
-        div.sheet-headers {
-          display: grid;
-          grid-template-columns: $contactsGrid;
-          width: 100%;
-        }
+				div.sheet-headers {
+					display: grid;
+					grid-template-columns: $contactsGrid;
+					width: 100%;
+				}
 
-        div.repitem {
-          grid-template-columns: $contactsGrid;
-          @include repeatingInformation(8, false);
+				div.repitem {
+					grid-template-columns: $contactsGrid;
+					@include repeatingInformation(8, false);
 
 
-          div.sheet-settings { 
-            grid-column: 1 / 8;
-          }
-        }
-      }
-    }
+					div.sheet-settings { 
+						grid-column: 1 / 8;
+					}
+				}
+			}
+		}
 
-     /*** Vehicle ****/
-     div.sheet-vehicle {
-      
-     }
+		 /*** Vehicle ****/
+		 div.sheet-vehicle {
+			
+		 }
 	}
 	@import 'src/scss/_pc'; 
 
@@ -990,25 +892,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 /*****************************************************************************************/
 /**************************************** FOOTER ****************************************/
 /***************************************************************************************/
-	/**** Footer ****/
-	.sheet-footer {
-		border     : none;
-		font-size  : 0.55em;
-		line-height: 15px;
-		margin-top : 15px;
-		text-align : left;
-		width      : 700px;}
-
-	div.sheet-footer div {
-		display: inline-block;
-		width: 90%;
-	}
-
-	div.sheet-footer img {
-		float: right;
-		vertical-align: top;
-		width: 5%;
-	}
+@import 'src/scss/layout/footer';
 
 /********************************************************************************************************/
 /**************************************** REPEATING SECTIONS *******************************************/
@@ -1027,20 +911,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 	@import 'src/scss/_importer';
 
 
-/********************************************************************************************************/
-/*******************************         FireFox             *******************************************/
-/******************************************************************************************************/
 
-input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;}
+@import 'src/scss/layout/firefox';
 
-input[type=number] {
-    -moz-appearance:textfield;}
-
-
- /********************************************************************************************/
-/*****************         French Adjustments                ********************************/
-/*******************************************************************************************/
-	@import 'src/scss/_lang-fr';
+@import 'src/scss/layout/lang-fr';
