--- a/Shadowrun5thEdition/src/pug/tabs/arms.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/arms.pug
@@ -31,7 +31,7 @@
                   each val in weaponModes
                     option(data-i18n=val.toLowerCase() value=val) #{val}
               else
-                span.center(name=`attr_${attrName}`)
+                span.text-center(name=`attr_${attrName}`)
             +repeatingSectionFlags()
             .settings
               each val, key in pcRangeWeaponObject
@@ -87,7 +87,7 @@
             +weaponRollButton(pcMeleeWeaponButton)
             each val in ['Dam', 'Acc', 'AP', 'Reach']
               - const attrName = val === 'Dam' ? 'damage' : val.toLowerCase();
-              span.center(name=`attr_${attrName}`)
+              span.text-center(name=`attr_${attrName}`)
             +repeatingSectionFlags()
             .settings
               each val, key in pcMeleeWeaponObject
@@ -134,11 +134,11 @@
             button(name=`roll_soak` type='roll' value!=noWoundsRollBegining+'{{header=^{soak}}}{{base=^{body} ♦ ^{armor}}}{{dice=[[((@{body}+@{rating}+@{dicepool_modifier})'+noWoundsRollEnding)
               span(name='attr_name')
             button(name=`roll_armor` type='roll' value!=noWoundsRollBegining+'{{header=@{name}}}{{base= ^{armor}}}{{dice=[[((@{rating})'+noWoundsRollEnding)
-              span.center(name='attr_rating')
+              span.text-center(name='attr_rating')
             each val in ['Acid', 'Cold', 'Electrical', 'Fire', 'Radiation']
               - const attrName = val.toLowerCase();
               button(name=`roll_${attrName}` type='roll' value!=noWoundsRollBegining+`{{header=^{${attrName}protection}}}{{base= ^{armor}}}{{dice=[[((@{body}+@{rating}+@{dicepool_modifier}+@{${attrName}_modifier})`+noWoundsRollEnding)
-                span.center(name=`attr_${attrName}_modifier`)
+                span.text-center(name=`attr_${attrName}_modifier`)
             +repeatingSectionFlags()
             .settings
               each val, key in pcArmorObject
