--- a/Shadowrun5thEdition/src/scss/_rolltemplate.scss
+++ b/Shadowrun5thEdition/src/scss/_rolltemplate.scss
@@ -1,41 +1,41 @@
 	.sheet-rolltemplate-rolls div.sheet-template-body {
-		border       : 2px solid #000 !important;
+		border       : 2px solid $blacker !important;
 		border-radius: 3px 3px 3px 3px;}
 
 	.sheet-rolltemplate-rolls .sheet-template-header {
-		background-color: #431714;
-		border          : 1px solid #000;
-		border-bottom   : 2px solid #000;
-		box-shadow      : inset 0px 0px 3px 1px #000;
-		color           : #fff;
+		background-color: $red;
+		border          : 1px solid $blacker;
+		border-bottom   : 2px solid $blacker;
+		box-shadow      : inset 0px 0px 3px 1px $blacker;
+		color           : $white;
 		font-size       : 1.5em;
 		font-variant    : small-caps;
 		letter-spacing  : 2px;
 		padding         : 3px 0px 5px 0px;
 		text-align      : center;
 		text-transform  : capitalize;
+    font-weight: bold;
 
     h1 {
-      font-weight: bold;
-      font-size: 1.1em;
-      color: #fff;
+      font-size: 0.8em;
+      color: $white;
+      line-height: 1em;
     }
 
     span {
       font-family   : 'tahoma';
       font-size     : 0.5em;
-      font-weight   : normal;
       font-variant  : normal;
       letter-spacing: 1px;
     }
   }
 
 	.sheet-rolltemplate-rolls .sheet-template-row {
-		color           : #fff;
+		color           : $white;
 		text-align      : center;
 		font-size       : 18px;
 		background-color: #1c1c1c;
-		box-shadow      : inset 0px 0px 3px 1px #000;
+		box-shadow      : inset 0px 0px 3px 1px $blacker;
 		line-height     : 1.1em;
 		font-family     : 'helvetica';
 		padding         : 5px 5px 3px 5px;
@@ -49,24 +49,24 @@
       font-family: "dicefontd6";
       color: #1c1c1c;;
       border: none;
-      box-shadow: outset 0px 0px 3px 1px #000;
+      box-shadow: outset 0px 0px 3px 1px $blacker;
       font-size: 1.8em;
       background: none !important;
       padding: 1px;
-      color: #fff;
-      text-shadow: 1px 1px 2px black, 0 0 25px #1c1c1c, 0 0 5px #1c1c1c;
+      color: $white;
+      text-shadow: $text-shadow-dark;
       
        &:hover, &:focus, &:active { 
         font-weight: bold; 
-        color: #fff;
-        text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px $red;
+        color: $white;
+        text-shadow: $text-shadow-red;
       }
     }
   }
 
 	.sheet-rolltemplate-rolls .inlinerollresult {
 		display         :inline-block;
-		color           : #fff;
+		color           : $white;
 		font-size       : 25px;
 		background-color: transparent;
 		border          : none;
@@ -77,9 +77,9 @@
 	.sheet-rolltemplate-rolls .inlinerollresult.importantroll {
 		border: none;}
 
-	.sheet-rolltemplate-rolls .inlinerollresult.fullfail {color: #FCD116;}
+	.sheet-rolltemplate-rolls .inlinerollresult.fullfail {color: $gold;}
 
-	.sheet-rolltemplate-rolls .inlinerollresult.fullcrit {color: #fff;}
+	.sheet-rolltemplate-rolls .inlinerollresult.fullcrit {color: $white;}
 
 	.sheet-rolltemplate-rolls .sheet-template-desc {font-size: 0.8em;}
 
