--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -177,7 +177,6 @@ input:checked + .sheet-slider:before {
     background-color: #333;
     border-radius: 2px;
     border: 1px solid #040404;
-    box-shadow: inset 0px 0px 3px 1px #7c7c7c;
     font-size: 1em;
     font-weight: bolder;
     text-transform: capitalize;
@@ -186,6 +185,8 @@ input:checked + .sheet-slider:before {
     .sheet-tabs .repcontrol button[type='action'].repcontrol_add:after,
     .repcontrol .sheet-tabs button[type='action'].repcontrol_add:after, .sheet-tabs .itemcontrol button[type='action'].repcontrol_del, .itemcontrol .sheet-tabs button[type='action'].repcontrol_del {
       text-transform: lowercase; }
+    .sheet-tabs button[type='action']:hover {
+      text-shadow: inset 0px 0px 3px 1px #e31715; }
   .sheet-tabs button[type='roll'] {
     background: none;
     border: none;
@@ -2525,7 +2526,7 @@ input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body div.she
 
 .sheet-pc .sheet-tabs input[value*='arms'] ~ button[name*='arms'], .sheet-pc .sheet-tabs input[value*='augs'] ~ button[name*='augs'], .sheet-pc .sheet-tabs input[value*='core'] ~ button[name*='core'], .sheet-pc .sheet-tabs input[value*='gear'] ~ button[name*='gear'], .sheet-pc .sheet-tabs input[value*='options'] ~ button[name*='options'], .sheet-pc .sheet-tabs input[value*='social'] ~ button[name*='social'], .sheet-pc .sheet-tabs input[value*='magic'] ~ button[name*='magic'], .sheet-pc .sheet-tabs input[value*='matrix'] ~ button[name*='matrix'], .sheet-pc .sheet-tabs input[value*='vehicle'] ~ button[name*='vehicle'] {
   background-color: #610b0d;
-  box-shadow: inset 0px 0px 3px 1px #610b0d; }
+  box-shadow: inset 0px 0px 3px 1px #e31715; }
 
 /*****************************************************************************************/
 /**************************************** FOOTER ****************************************/
