--- a/Shadowrun5thEdition/src/scss/layout/_tabs.scss
+++ b/Shadowrun5thEdition/src/scss/layout/_tabs.scss
@@ -6,7 +6,6 @@
       background-color: #333;
       border-radius   : 2px;
       border          : 1px solid $blacker;
-      box-shadow      : inset 0px 0px 3px 1px $grayshadow;
       font-size       : 1em;
       font-weight     : bolder;
       text-transform  : capitalize;
@@ -14,6 +13,10 @@
 
       &.sheet-pictos {
         text-transform: lowercase;
+      }
+
+      &:hover {
+        text-shadow: $box-shadow-red;
       }
     }
 
