--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -215,5 +215,5 @@
 
 	%highlight-button {
 		background-color: $red;
-		box-shadow      : inset 0px 0px 3px 1px $red; 
+		box-shadow:  $box-shadow-red; 
 	}
