--- a/Shadowrun5thEdition/src/scss/base/_base.scss
+++ b/Shadowrun5thEdition/src/scss/base/_base.scss
@@ -1,11 +1,12 @@
 * {
-    box-sizing: border-box;
-    font-family: sans-serif;}
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
 
 button {
   background-image: none;
-  font-size       : 0.8em;
-  text-shadow     : none;
+  font-size: 0.8em;
+  text-shadow: none;
 
   &[type='roll'],
   &[type='action'] {
