update drain, update roll template

--- a/Shadowrun4thEdition/Shadowrun4thEdition.css
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.css
@@ -2575,31 +2575,46 @@ div.sheet-footer {
   color: #1c1c1c;
   font-size: 1.5em;
   font-variant: small-caps;
-  font-weight: bold;
   letter-spacing: 2px;
-  padding: 8px 0px 3px 0px;
+  padding: 3px 0px 5px 0px;
   text-align: center;
-  text-transform: capitalize; }
-
-.sheet-rolltemplate-rolls .sheet-template-header span {
-  font-family: 'tahoma';
-  font-size: 0.5em;
-  font-weight: normal;
-  font-variant: normal;
-  letter-spacing: 1px; }
+  text-transform: capitalize;
+  font-weight: bold; }
+  .sheet-rolltemplate-rolls .sheet-template-header h1 {
+    font-size: 0.8em;
+    color: #1c1c1c;
+    line-height: 1em; }
+  .sheet-rolltemplate-rolls .sheet-template-header span {
+    font-family: 'tahoma';
+    font-size: 0.5em;
+    font-variant: normal;
+    letter-spacing: 1px; }
 
 .sheet-rolltemplate-rolls .sheet-template-row {
   color: #fff;
   text-align: center;
   font-size: 18px;
-  background-color: #333;
+  background-color: #1c1c1c;
   box-shadow: inset 0px 0px 3px 1px #333;
   line-height: 1.1em;
   font-family: 'helvetica';
   padding: 5px 5px 3px 5px; }
-
-.sheet-rolltemplate-rolls .sheet-template-row:nth-child(odd) {
-  background-color: #7c7c7c; }
+  .sheet-rolltemplate-rolls .sheet-template-row:nth-child(2n+0) {
+    background-color: #555; }
+  .sheet-rolltemplate-rolls .sheet-template-row a[href^="~"] {
+    font-family: "dicefontd6";
+    color: #1c1c1c;
+    border: none;
+    box-shadow: outset 0px 0px 3px 1px #333;
+    font-size: 1.8em;
+    background: none !important;
+    padding: 1px;
+    color: #fff;
+    text-shadow: 1px 1px 2px black, 0 0 25px #1c1c1c, 0 0 5px #1c1c1c; }
+    .sheet-rolltemplate-rolls .sheet-template-row a[href^="~"]:hover, .sheet-rolltemplate-rolls .sheet-template-row a[href^="~"]:focus, .sheet-rolltemplate-rolls .sheet-template-row a[href^="~"]:active {
+      font-weight: bold;
+      color: #fff;
+      text-shadow: 1px 1px 2px black, 0 0 25px #afd3e2, 0 0 5px #1e4583; }
 
 .sheet-rolltemplate-rolls .inlinerollresult {
   display: inline-block;
