--- a/Shadowrun4thEdition/Shadowrun4thEdition.pug
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.pug
@@ -667,7 +667,7 @@ include src/pug/_npc.pug
   img(alt='Emerald Productins, LLC' src=`${imageSource}/EProd_Emerald_Gloss.png`)
 
 //- ROLL TEMPLATES
-include src/html/rolltemplates.html
+include src/pug/_rolltemplates.pug
 
 //- HIDDEN
 include src/html/hidden.html
