--- a/Shadowrun4thEdition/src/scss/_rolltemplate.scss
+++ b/Shadowrun4thEdition/src/scss/_rolltemplate.scss
@@ -10,32 +10,58 @@
 		color           : $blackish;
 		font-size       : 1.5em;
 		font-variant    : small-caps;
-		font-weight     : bold;
 		letter-spacing  : 2px;
-		padding         : 8px 0px 3px 0px;
+		padding         : 3px 0px 5px 0px;
 		text-align      : center;
-		text-transform  : capitalize;}
+		text-transform  : capitalize;
+    font-weight: bold;
 
-	.sheet-rolltemplate-rolls .sheet-template-header span {
-		font-family   : 'tahoma';
-		font-size     : 0.5em;
-		font-weight   : normal;
-		font-variant  : normal;
-		letter-spacing: 1px;}
+    h1 {
+      font-size: 0.8em;
+      color: $blackish;
+      line-height: 1em;
+    }
+
+    span {
+      font-family   : 'tahoma';
+      font-size     : 0.5em;
+      font-variant  : normal;
+      letter-spacing: 1px;
+    }
+  }
 
 	.sheet-rolltemplate-rolls .sheet-template-row {
 		color           : $white;
 		text-align      : center;
 		font-size       : 18px;
-		background-color: $blacker;
+		background-color: $blackish;
 		box-shadow      : inset 0px 0px 3px 1px $blacker;
 		line-height     : 1.1em;
 		font-family     : 'helvetica';
 		padding         : 5px 5px 3px 5px;
-  }
 
-	.sheet-rolltemplate-rolls .sheet-template-row:nth-child(odd) {
-    background-color: $grayshadow;
+    &:nth-child(2n+0) {
+      background-color: #555;
+    }
+
+    //Drain button
+    a[href^="~"] {
+      font-family: "dicefontd6";
+      color: #1c1c1c;;
+      border: none;
+      box-shadow: outset 0px 0px 3px 1px $blacker;
+      font-size: 1.8em;
+      background: none !important;
+      padding: 1px;
+      color: $white;
+      text-shadow: $text-shadow-dark;
+      
+       &:hover, &:focus, &:active { 
+        font-weight: bold; 
+        color: $white;
+        text-shadow: $text-shadow-red;
+      }
+    }
   }
 
 	.sheet-rolltemplate-rolls .inlinerollresult {
@@ -51,7 +77,7 @@
 	.sheet-rolltemplate-rolls .inlinerollresult.importantroll {
 		border: none;}
 
-	.sheet-rolltemplate-rolls .inlinerollresult.fullfail {color: $primary}
+	.sheet-rolltemplate-rolls .inlinerollresult.fullfail {color: $primary;}
 
 	.sheet-rolltemplate-rolls .inlinerollresult.fullcrit {color: $white;}
 
