--- a/Shadowrun4thEdition/src/scss/abstracts/_variables.scss
+++ b/Shadowrun4thEdition/src/scss/abstracts/_variables.scss
@@ -17,3 +17,11 @@ $tabs:'arms', 'augs', 'core', 'gear', 'options', 'social', 'magic', 'matrix', 'v
 $characterTypes: 'npc', 'pc';
 $specialCharacters: 'magic', 'resonance';
 $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
+
+
+  $text-shadow: 1px 1px 2px $gray, 0 0 25px $white, 0 0 5px $white;
+  $text-shadow-dark: 1px 1px 2px black, 0 0 25px #1c1c1c, 0 0 5px #1c1c1c;
+  $text-shadow-red: 1px 1px 2px black, 0 0 25px $primary, 0 0 5px $accent;
+
+  $box-shadow: inset 0px 0px 3px 1px $grayshadow;
+  $box-shadow-red: inset 0px 0px 3px 1px $primary;
