--- a/Shadowrun4thEdition/Shadowrun4thEdition.pug
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.pug
@@ -32,7 +32,7 @@ include src/pug/_variables.pug
       label.switch(data-i18n-title=key title=key)
         input.whisper-toggle(name='attr_'+key+'_toggle' type='checkbox' value=val)
         span.slider
-    button(name='d6' title='Roll D6s' type='roll' value!='@{gm_toggle} &{template:rolls}{{header=^{d6}}}{{base=^{d6}}}{{dice=[[(?{d6s|0}d6>5)]]}}') L
+    button(name='d6' title='Roll D6s' type='roll' value!='@{gm_toggle} &{template:rolls}{{header=^{d6}}}{{base=^{d6}}}{{dice=[[(?{d6s|0}d6>5@{explode_toggle})]]}}') L
     input(name='attr_tab' type='hidden' value='options')
     button.pictos(name='act_tab_options' title='@{tab}' type='action' ) y
     each val in tabs
